<resources>
    <string name="app_name">SEVNS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">Application Logo</string>
    <string name="report_accident">Report Accident</string>
    <string name="track_case">Track Case</string>
    <string name="hospital_login">Hospital Login</string>
    <string name="driver_login">Driver Login</string>
    <string name="register_prompt">Don\'t have an account? Register below</string>
    <string name="hospital_register">Hospital Register</string>
    <string name="driver_register">Driver Register</string>
    <string name="case_id">Case ID:</string>
    <string name="case_id_hint">Please enter a case number</string>
    <string name="status">Status:</string>
    <string name="refresh">Refresh</string>
    <string name="accident_status_title">Accident Status</string>
    <string name="status_placeholder">Status will be displayed here</string>
    <string name="accident_reporting_image">Image for accident reporting screen</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="describe_accident">Describe the accident</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="submit_report">Submit Report</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="register_driver">Register Driver</string>
    <string name="driver_login_image">Driver Login Image</string>
    <string name="driver_registration_title">Driver Registration</string>
    <string name="driver_name">Driver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hospital_registration_title">Hospital Registration</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="address">Address</string>
    <string name="location_coordinates">Location Coordinates</string>
    <string name="fetching_coordinates">Fetching Coordinates...</string>
    <string name="register_hospital">Register Hospital</string>
    <string name="driver_screen_title">Driver Route</string>
    <string name="eta_placeholder">ETA: -</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="sign_out">Sign Out</string>
    <string name="recenter_map">Recenter Map</string>
    <string name="hospital_dashboard_title">Hospital Dashboard</string>
    <string name="no_active_reports">No active reports</string>
</resources>